<resources>
    <string name="app_name">SmartAttendance</string>
    <string name="already_nhave_an_naccount">Already have an Account?</string>
    <string name="password">Password</string>
    <string name="login_as_teacher">Login as Teacher</string>
    <string name="new_account">New Account</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="empty" />

    <string name="forget_password">Forget Password?</string>
    <string name="here_s_your_first_step_with_us">Here Is Your First Step With Us!</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_email_address">Email Address</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="register_as_teacher">Register As Teacher</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Password</string>
    <string name="admin">Admin</string>

    <string name="login_as_student">Login as Student</string>
    <string name="we_just_need_your_registered_email_id_to_sent_you_password_reset_instruction">We just need your registered Email Id to sent you password reset instruction</string>
    <string name="email_id">Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">&lt;&lt;BACK</string>
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="notice_board">Notice Board</string>
    <string name="profile">Profile</string>
    <string name="class_name">Class Name</string>
    <string name="subject">Subject</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="admin_hod_name">Admin/HOD Name</string>

</resources>