<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home_admin"
        android:title="@string/home"
        android:icon="@drawable/home_nav_bottom"
        android:enabled="true"
        android:checked="true"

        />

    <item
        android:id="@+id/nav_attendance_admin"
        android:title="@string/attendance"
        android:icon="@drawable/attendance_nav_bottom"

        />
    <item
        android:id="@+id/nav_noticeboard_admin"
        android:title="@string/notice_board"
        android:icon="@drawable/noticeboard_nav_bottom"
        />

    <item
        android:id="@+id/nav_profile_admin"
        android:title="@string/profile"
        android:icon="@drawable/profile_nav_bottom"
        />

</menu>