<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="70dp"
        android:fontFamily="cursive"
        android:gravity="center|center_vertical"
        android:text="@string/forget_password"
        android:textColor="@color/blue2"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/delius"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/we_just_need_your_registered_email_id_to_sent_you_password_reset_instruction"
        android:textColor="@color/blue2"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:text="@string/email_id"
        android:textColor="@color/skyblue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/resetEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/blue2"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:height="60dp"
        android:backgroundTint="@color/skyblue"
        android:fontFamily="@font/salsa"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="#062C49"
        android:textSize="18sp" />

</LinearLayout>