<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/skyblue"
        android:backgroundTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/waveView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <TextView

        android:layout_width="133dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/gabriela"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:text="@string/here_s_your_first_step_with_us"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/waveView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/waveView" />

    <ToggleButton
        android:id="@+id/UserTypeImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="102dp"
        android:background="@drawable/checktoggle"
        android:checked="true"
        android:text="@string/togglebutton"
        android:textOff="@string/empty"
        android:textOn="@string/empty"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userType"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amethysta"
        android:text="@string/teacher"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/UserTypeImg"
        app:layout_constraintStart_toStartOf="@+id/UserTypeImg"
        app:layout_constraintTop_toBottomOf="@+id/UserTypeImg" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape_rect"
        android:elevation="3dp"
        android:orientation="vertical"
        android:outlineProvider="bounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:drawableStart="@drawable/person"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:autofillHints=""
            android:drawableStart="@drawable/contact_no"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:autofillHints=""
            android:drawableStart="@drawable/birthdate"
            android:drawablePadding="20dp"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Birthdate"
            android:inputType="none" />


        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:autofillHints=""
            android:drawableStart="@drawable/lock"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPersonName|textPhonetic|textPassword" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:drawableStart="@drawable/verify"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/adminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:autofillHints=""
            android:drawableStart="@drawable/classname"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/admin_hod_name"
            android:visibility="visible" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="45dp"
            android:elevation="10dp"
            android:fontFamily="@font/quando"
            android:outlineProvider="background"
            android:state_checked="false"
            android:text="@string/admin"
            android:textAlignment="viewStart"
            android:textColor="@color/skyblue"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="40dp"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toTopOf="@+id/linearLayout1">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton"
            android:elevation="20dp"
            android:fontFamily="@font/quando"
            android:text="@string/register_as_teacher"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>