<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassPopup">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toTopOf="@+id/display_class_nam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/classimg" />

    <TextView
        android:id="@+id/display_class_nam"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/class_name"
        android:textAlignment="center"
        android:textColor="@color/skyblue"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/studimg"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintBottom_toTopOf="@+id/stud"
        app:layout_constraintEnd_toStartOf="@+id/teachimg"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/studenticon" />

    <TextView
        android:id="@+id/stud"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="230dp"
        android:text="@string/student"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/teachimg"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/teach"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/teachericon" />

    <TextView
        android:id="@+id/teach"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="230dp"
        android:text="@string/teacher"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/subimg"
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/book" />

    <TextView
        android:id="@+id/sub"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/subject"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>